crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__predicates__select_where_name_not_in.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": "1",
        "Title": "For Those About To Rock We Salute You"
      },
      {
        "AlbumId": "2",
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": "3",
        "Title": "Restless and Wild"
      },
      {
        "AlbumId": "4",
        "Title": "Let There Be Rock"
      },
      {
        "AlbumId": "5",
        "Title": "Big Ones"
      }
    ]
  }
]
