crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__predicates__select_where_name_not_like.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": "2",
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": "3",
        "Title": "Restless and Wild"
      },
      {
        "AlbumId": "5",
        "Title": "Big Ones"
      },
      {
        "AlbumId": "6",
        "Title": "Jagged Little Pill"
      },
      {
        "AlbumId": "7",
        "Title": "Facelift"
      }
    ]
  }
]
