crates/tests/databases-tests/src/cockroach/snapshots/databases_tests__cockroach__query_tests__predicates__select_where_related_exists.snap
---
source: crates/tests/databases-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "albums": {
          "rows": [
            {
              "title": "Supernatural"
            },
            {
              "title": "Santana - As Years Go By"
            },
            {
              "title": "Santana Live"
            }
          ]
        },
        "title": "Santana"
      }
    ]
  }
]
